Parallax Scroll-Down effect/style.css
*{
    margin:0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    scroll-behavior: smooth;
}
body
{
    min-height: 100vh;
    overflow-x: hidden;
    background: linear-gradient(#2b1055,#7597de);
}
header{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    padding: 30px 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 10000;
}
header a{
    color: aliceblue;
    font-weight: 700;
    text-decoration: none;
    letter-spacing: 2px;
}
header a:hover{
    color: rgba(139, 181, 201, 0.541)
}
section{
    position:relative;
    width:100%;
    height: 100vh;
    padding: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}
section::before{
    content: '';
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 100px;
    background: linear-gradient(to top, #1c0522,transparent);
    z-index: 100;
}
section img{
    position: absolute;
    top: 0;
    left:0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}
#moon {
    mix-blend-mode: screen;
}
section img#mountains_front{
    z-index: 10;
}
#text{
    right: -400px;
    position: absolute;
    color: #fff;
    white-space: nowrap;
    font-size: 4.5em;
    z-index: 9;
}
.sec{
    position: relative;
    padding: 100px;
    background: #1c0522;
}
.sec h2{
    font-size: 2.2em;
    margin-bottom: 10px;
    color: aliceblue;
}
.sec p{
    font-size: 1.2em;
    color: aliceblue;
}

